# papeterie-engine

./: .env.template  .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  GEMINI.md  Jenny Ibarluzea.md  LICENSE  README.md  SETUP.md  analyze_css.py  config.toml  history.md  llm.txt  llms.txt  main.py  papeterie.db  pyproject.toml  requirements.txt
.agent/: config.toml
.agent/workflows/: add-scene.md  architecture-ade.md  cleanup-ade.md  cleanup.md  css-review-ade.md  css-review.md  design-planning.md  docs-path-integrity-ade.md  docs-path-integrity.md  doxygen-ade.md  project-history-ade.md  requirements-management-ade.md  safe-css-ade.md  security-review-ade.md  triage-and-fix-loop-ade.md  ux-review.md  validate-ade.md  validate.md  workday-ade.md
.gemini/: settings.json
.github/workflows/: ai-fixer.yml
assets/prompts/: BackgroundExtraction.prompt  BehaviorStructuring.prompt  CreativePrompt.prompt  MetaFixupPrompt.prompt  MetaPrompt.prompt  SceneDecomposition.prompt  SceneDescriptiveAnalysis.prompt  SpriteExtraction.prompt  SpriteOptimization.prompt
assets/scenes/sailboat/: scene.json
assets/scenes/starbuilders/: scene.json
assets/sounds/: README.md
assets/sprites/boat/: boat.prompt.json
assets/story/: test_drift.json
docs/: AGENTS.md  BACKLOG.md  GEMINI.md  HOWTO_Agent_Workflows.md  HOWTO_Deploy_PythonAnywhere.md  HOWTO_Develop.md  HOWTO_develop.md  ISSUES.md  REQUIREMENTS.md  SETUP.md  environmental_reaction_design.md  event_design.md  export_scene_design.md  frontend_architecture.md  high_level_design.md  history.md  junior_dev_ecosystem.md  persistence_and_user_design.md  scene_design.md  scene_editing_architecture.md  sprite_design.md  staged_changes_review.md  ux_guidelines.md  verification.md
docs/assets/: frontend_architecture_flow.dot
docs/blogs/: 2026-01-09-architecture-and-ai-partnership.md  2026-01-10-journey-to-pythonanywhere.md
docs/design/: client_side_storage.md  css_refactoring_roadmap.md  deployment.md  high_level_design.md  junior_dev_ecosystem.md  multi_repo_architecture.md  persistence_and_user_design.md  refactoring_plan.md  scene_editing_architecture.md  subsystem_design.md  ui_redesign_2026.md  undo_redo_system.md  ux_design.md  verification.md
history_assets/: debt_history.mmd  loc_history.mmd
logs/: token_ledger.csv
prompts/: MetaFixupPrompt.prompt  MetaPrompt.prompt
scripts/: analyze.sh  analyze_project.py  analyze_tokens.py  bootstrap_dev_ai.sh  check_models.py  enforce_relative_paths.py  ensure_env.sh  generate_backend_matrix.py  generate_diagrams.py  generate_sample_sounds.py  list_models.py  migrate_legacy_behaviors.py  migrate_scenes_to_behaviors.py  prepare_deploy.sh  process_assets.py  reset_pristine.sh  setup_pythonAnywhere.py  smart_validate.sh  smart_validate.sh.deprecated  start_dev.sh  unified_matrix.js  validate.sh  validate.sh.backup  verify_cdp.js
src/: config.py  wsgi.py
src/compiler/: engine.py  gemini_client.py  models.py  token_logger.py
src/renderer/: theatre.py
src/server/: auth.py  database.py  dependencies.py  image_processing.py  local_processor.py  logger.py  main.py
src/web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest-loc-tracker.js
story/: scene1.json
tests/: conftest.py  juniordeveloper.md  repro_validation.py  test_auth.py  test_backend.py  test_behaviors.py  test_compiler.py  test_env.py  test_export.py  test_extended_backend.py  test_gemini_client.py  test_green_screen_integration.py  test_image_processing.py  test_local_processor.py  test_physics.py  test_prompts.py  test_renderer.py  test_rotation_logic.py  test_routers_extended.py  test_scene_execution.py  test_scene_optimization.py  test_sounds.py  test_theatre.py  test_theatre_paths.py  test_token_logger.py  test_user_isolation.py
tests/validation/: test_e2e_wrapper.py  test_frontend_unit.py  test_linters.py  test_static_analysis.py
(+175 files in other folders)
