[project]
name = "papeterie-engine"
version = "0.1.0"
description = "Toy Theatre animation engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.56.0",
    "moviepy>=2.0.0",
    "pillow>=11.3.0",
    "pydantic>=2.0.0",
    "pygame-ce>=2.5.6",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests as live integration tests (deselect with '-m \"not live\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "pytest-testmon>=2.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle errors, F=pyflakes, I=isort
ignore = []

[tool.coverage.run]
source = ["src"]

